Removed left borders on compose fields so they align left. Fixed missing red border on subject group error.

--- a/src/sass/messaging/partials/_message-compose.scss
+++ b/src/sass/messaging/partials/_message-compose.scss
@@ -29,10 +29,6 @@
     border-bottom: 1px solid $color-gray;
     border-top: 1px solid $color-gray;
   }
-
-  @media (min-width: $medium-screen) {
-    border-left: 4px solid transparent;
-  }
 }
 
 
@@ -50,7 +46,6 @@
   padding: 1.5rem 0;
   
   @media (min-width: $medium-screen) {
-    border-left: 4px solid transparent;
     display: inline-block;
     width: 95%;
   }
@@ -108,11 +103,11 @@
 
 .msg-recipient > div,
 .msg-subject-group {
-  padding: 1.5rem;
+  padding-top: .75rem;
+  padding-bottom: .75rem;
 
-  @media (min-width: $medium-screen) {
-    padding-top: .75rem;
-    padding-bottom: .75rem;
+  @media (max-width: $medium-screen) {
+    padding: 1.5rem;
   }
 }
 
@@ -255,7 +250,7 @@ button.msg-btn-save {
 
 .msg-compose-write {
   @media (min-width: $medium-screen) {
-    padding: .75rem 1.5rem;
+    padding: .75rem 0;
   }
 }
 
@@ -415,6 +410,7 @@ button.msg-btn-save {
     padding: 1rem;
   }
 
+  .msg-subject-group-inner,
   .msg-write,
   .msg-send-group {
     @media (min-width: $medium-screen) {
